# grpc-rust-example

./: .env  Cargo.toml  README.md  build.rs
prisma/: schema.prisma
proto/: calculator.proto  contact.proto
src/: lib.rs  main.rs  prisma.rs
src/calculator/: client.rs  server.rs
src/contact/: client.rs  server.rs
src/helloworld/: client.rs
